# rushterm

./: Cargo.toml  README.md  RELEASE.md
examples/: menu.rs
src/: lib.rs
