[package]
name = "rushterm"
version = "1.1.0"
edition = "2021"
description = "Make your CLI app easy by adding menu. Create nested menus, navigate with hotkeys. Data-driven. No function/macro complexity."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rushterm/1.0.1/rushterm/"
homepage = "https://github.com/seanandyrush/rushterm"
repository = "https://github.com/seanandyrush/rushterm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.23.1" }
